rarex | move catchphrase to the header

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.html
@@ -1,6 +1,10 @@
 <header class="main-header">
   <div class="main-header__container">
-    <a class="main-header__logo logo" [href]="naa10FoundationLink" target="_blank">
+    <a
+      class="main-header__logo logo"
+      [href]="naa10FoundationLink"
+      target="_blank"
+    >
       <img
         src="assets/images/naa10-foundation-logo-transparent.png"
         class="logo__img"
@@ -9,6 +13,7 @@
     </a>
 
     <div class="main-header__powered-by powered-by">
+      <p class="powered-by__catchphrase" translate>Header.Catchphrase</p>
       <img
         class="powered-by__img"
         src="assets/images/powered-by-rarex.png"
