--- a/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.scss
@@ -1,4 +1,4 @@
-@import '../../../app-theme.scss';
+@import "../../../app-theme.scss";
 
 .main-header {
   background-color: mat-color($app-theme, 100);
@@ -26,11 +26,6 @@
   &__powered-by {
     align-self: flex-end;
     margin-left: auto;
-    height: 3.6rem;
-
-    @media only screen and (max-width: 480px) {
-      height: 2.4rem;
-    }
   }
 }
 
@@ -42,8 +37,22 @@
 }
 
 .powered-by {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: flex-end;
+
+  &__catchphrase {
+    margin: 0;
+
+    font-size: 1.0625rem;
+    color: mat-color($app-theme, 300);
+  }
+
   &__img {
-    display: block;
-    height: 100%;
+    height: 2.8rem;
+
+    @media only screen and (max-width: 480px) {
+      height: 2.4rem;
+    }
   }
 }
