rarex | make rarex logo a link to the original website

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.scss
@@ -47,11 +47,15 @@
     color: mat-color($app-theme, 300);
   }
 
-  &__img {
+  &__link {
     height: 3.2rem;
 
     @media only screen and (max-width: 480px) {
       height: 2.4rem;
     }
+  }
+
+  &__img {
+    height: 100%;
   }
 }
