--- a/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.html
@@ -13,11 +13,13 @@
     </a>
 
     <div class="main-header__powered-by powered-by">
-      <img
-        class="powered-by__img"
-        src="assets/images/powered-by-rarex.png"
-        [alt]="'Header.Alts.PoweredBy' | translate"
-      />
+      <a class="powered-by__link" [href]="rarexLink" target="_blank">
+        <img
+          class="powered-by__img"
+          src="assets/images/powered-by-rarex.png"
+          [alt]="'Header.Alts.PoweredBy' | translate"
+        />
+      </a>
       <p class="powered-by__catchphrase" translate>Header.Catchphrase</p>
     </div>
   </div>
