--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -684,15 +684,24 @@ input.mat-input-element.study-listing-filter {
     position: absolute;
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (min-width: 993px) and (max-width: 1200px) {
+    .Header-background {
+        padding: 30px 40px 20px 80px !important;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 992px) {
     .Header-background {
         padding: 25px 0 0 0 !important;
     }
     .navbar-header {
-        padding: 0 25px 25px 25px !important;
+        padding: 0 10px 25px 25px !important;
     }
     .navbar-collapse {
         padding: 0 25px 10px 25px !important;
+    }
+    .navbar-nav {
+        max-width: 434px !important;
     }
 }
 
