rarex | adjust workflow progress styles

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/rarex-activity-page/rarex-activity-page.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/rarex-activity-page/rarex-activity-page.component.html
@@ -1,11 +1,11 @@
 <div class="rarex-activity-page container">
-  <div *ngIf="isConsentComplete" class="rarex-activity-page__progress-container">
+  <div *ngIf="isConsentComplete && !isFetchingActivities && isActivityShown" class="rarex-activity-page__progress-container">
     <app-workflow-progress [activityList]="activities" [instanceGuid]="instanceGuid"></app-workflow-progress>
   </div>
 
   <div class="rarex-activity-page__activity-container">
     <app-rarex-activity
-      *ngIf="isActivityShown"
+      *ngIf="isActivityShown && !isFetchingActivities"
       [studyGuid]="studyGuid"
       [activityGuid]="instanceGuid"
       (submit)="onSubmit($event)"
