--- a/ddp-workspace/projects/ddp-rarex/src/app/components/workflow-progress/workflow-progress.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/workflow-progress/workflow-progress.component.scss
@@ -13,6 +13,12 @@
   &__item {
     margin: 0;
 
+    cursor: pointer;
+
+    &:hover {
+      opacity: 0.75;
+    }
+
     @media only screen and (max-width: 1024px) {
       flex: 1;
       min-width: 10rem;
