--- a/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
@@ -7,6 +7,7 @@
 @import './styles/stay-informed.scss';
 @import './styles/age-up-thank-you.scss';
 @import './styles/activities.scss';
+@import './styles/dashboard.scss';
 
 $custom-typography: mat-typography-config($font-family: 'Untitled-Sans-Regular');
 @include mat-core($custom-typography);
@@ -50,12 +51,6 @@ body {
     flex-direction: column;
     align-items: center;
     min-height: 100%;
-
-    &_activity {
-        padding-bottom: 6.25rem;
-        padding-top: 1rem;
-        box-sizing: border-box;
-    }
 }
 
 .section {
@@ -167,8 +162,14 @@ p {
     font-family: 'Untitled-Sans-Regular', sans-serif;
 }
 
+.bold,
 .medium {
     font-family: 'Untitled-Sans-Medium', sans-serif;
+}
+
+.normal {
+    font-family: 'Untitled-Sans-Regular', sans-serif;
+    font-weight: 400;
 }
 
 .italic {
