--- a/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
@@ -140,6 +140,12 @@ p {
     margin: 0;
 }
 
+.only-margin-bottom {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .h2-big {
     font-size: 2.5rem;
     line-height: 3.125rem;
@@ -170,6 +176,8 @@ p {
 .normal {
     font-family: 'Untitled-Sans-Regular', sans-serif;
     font-weight: 400;
+    font-size: 18px;
+    line-height: 32px;
 }
 
 .italic {
