--- a/ddp-workspace/projects/ddp-rarex/src/styles/_typography.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_typography.scss
@@ -6,7 +6,7 @@ p {
   margin: 1em 0;
 
   font-size: 1.25rem;
-  line-height: 1.95rem;
+  line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -14,27 +14,27 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 2.25rem;
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 1.95rem;
 }
 
 h3 {
-  font-size: 1.75rem;
-}
-
-h4 {
   font-size: 1.5rem;
 }
 
+h4 {
+  font-size: 1.35rem;
+}
+
 h5 {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
 }
 
 h6 {
-  font-size: 1rem;
+  font-size: 1.05rem;
 }
 
 .underline {
