--- a/ddp-workspace/projects/ddp-rarex/src/styles/_activity.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_activity.scss
@@ -1,175 +1,272 @@
 @import '../app-theme.scss';
 
-// common activity styles
-.section-spinner {
-    display: flex;
-    align-items: center;
-    flex: 1;
-    justify-content: center;
-}
-
-.static-spinner {
-    padding-bottom: 6.25rem;
-    padding-top: 1rem;
-}
-
-.main_activity {
-    box-sizing: border-box;
-}
-
-.main_sticky {
-    padding-top: 5rem;
-}
-
-.sticky-section {
-    z-index: 2;
-    position: fixed;
-    top: 6.25rem; // header's height
-    background-color: mat-color($app-theme, 250);
-    transition: all 200ms linear;
-}
-
-.sticky-section_shadow {
-    box-shadow: 0 20px 20px -20px rgba(0, 0, 0, 0.2);
-}
-
-.sticky-block {
-    margin: 0.5rem 0;
-
-    .sticky__text {
-        font-size: 1.0625rem;
-        line-height: 1.375rem;
-        color: mat-color($app-theme, 100);
-        font-weight: 200;
-    }
-
-    .Link {
-        color: mat-color($app-theme, 100);
-        font-weight: 600;
-    }
-}
-
-@media only screen and (max-width: 850px) {
-    .sticky-section {
-        display: none;
-    }
-
-    .main_sticky {
-        padding-top: 1rem;
-    }
-}
-
+// DDP styles
 .ddp-close-button:hover {
     color: mat-color($app-theme, 650);
 }
 
-.sticky__text {
-    font-size: 1.0625rem;
-    line-height: 1.375rem;
-    color: mat-color($app-theme, 700);
+.ddp-activity-validation {
+  .ErrorMessageList {
+    list-style-type: square;
+  }
+
+  .ErrorMessageItem {
+    font-size: 1.25rem;
+    color: mat-color($app-theme, 500);
+    margin: .3rem 0;
+    padding: 0 0 0 0;
+  }
 }
 
-// steps
-.activity-steps {
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: max-content;
-    grid-gap: 1rem;
-    margin: 3rem 0;
+.ddp-required-question-prompt::after {
+  content: ' *';
 }
 
-.activity-step {
+.ddp-address-embedded {
+  &__title {
+    margin: 1.5rem 0;
+
+    font-size: 1.5rem;
+    font-family: inherit;
+    font-weight: bold;
+    color: black;
+  }
+
+  &__subtitle {
+    font-size: 1.25rem;
+  }
+}
+
+ddp-activity-content {
+  & > div:first-of-type:not(.ddp-content) {
+    margin: 1.5rem 0;
+
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: black;
+  }
+
+  & > .ddp-content {
+    font-size: 1.25rem;
+  }
+
+  ul, ol {
+    padding-left: 1.5rem;
+  }
+}
+
+.ddp-block-title-bold {
+  font-weight: bold;
+  color: black;
+}
+
+.ddp-block-body {
+  margin: 1rem 0 1rem -1.5rem;
+
+  font-size: 1.25rem;
+  line-height: 1.95rem;
+  color: mat-color($app-theme, 200);
+}
+
+.ddp-question-prompt {
+  margin: 1.5rem 0 0.5rem 0;
+
+  font-family: inherit;
+  font-size: 1.25rem;
+  font-weight: bold;
+  line-height: 1.95rem;
+  color: black;
+
+  p {
+    margin: 0;
+  }
+}
+
+ddp-activity-composite-answer {
+  p,
+  span {
+    font-weight: 400;
+  }
+
+  .mat-form-field {
+    width: 100%;
+  }
+}
+
+.ddp-composite-text {
+  flex-grow: 1;
+  margin-right: 1.5rem;
+}
+
+.ddp-helper {
+  margin: 0;
+  font-size: 1.125rem !important;
+  line-height: 1.4375rem;
+  color: mat-color($app-theme, 700);
+  font-weight: 400;
+}
+
+.ddp-counter-color {
+  color: mat-color($app-theme, 250);
+}
+
+.ddp-picklist-option-list-item {
+  height: auto !important;
+  margin-bottom: 1rem;
+}
+
+.picklist {
+  .ddp-date-field-margin:first-child {
+    margin: 0 1.5rem 0 0;
+  }
+
+  .ddp-date-field-margin:last-child {
+    margin: 0;
+  }
+}
+
+.ddp-radio-group-column .mat-radio-container {
+  top: 4px;
+}
+
+.ddp-learn-more {
+  margin: 1.5rem 0;
+
+  summary {
+    padding: 1.2rem 4.2rem 1.2rem 1.6rem;
+
+    background-color: mat-color($app-theme, 300);
+
+    font-size: 1rem;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+
+    position: relative;
     cursor: pointer;
-    color: mat-color($app-theme, 650);
-}
+    list-style: none;
 
-.activity-step.completed {
-    color: mat-color($app-theme, 700);
-}
+    &:focus,
+    &:hover {
+      background-color: darken(mat-color($app-theme, 300), 5%);
 
-.activity-step.active.completed {
-    color: mat-color($app-theme, 200);
-}
-
-@media only screen and (max-width: 600px) {
-    .activity-steps {
-        grid-auto-flow: row;
+      outline: none;
     }
-}
 
-// activity lists
-.ul-flat-list {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-
-    li::before {
-        content: "— ";
+    &::-webkit-details-marker {
+      display: none;
     }
-}
 
-.inner-ul-flat-list {
-    list-style-type: none;
-    padding: 0;
+    &::after {
+      content: '';
 
-    p::before {
-        content: "— ";
+      display: block;
+      width: 1rem;
+      height: 1rem;
+
+      margin-top: -0.5rem;
+
+      position: absolute;
+      top: 50%;
+      right: 1.6rem;
+
+      background-image: url('assets/images/arrow-down.svg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+
+      transition: transform 0.2s ease;
     }
+  }
+
+  &[open] {
+    summary::after {
+      transform: rotateX(180deg);
+    }
+  }
 }
 
-.simple-list {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-// buttons layout
-.activity-buttons {
-    display: flex;
-    justify-content: space-between;
-    margin: 2rem 0 0 0;
-}
-
-.button_right {
-    margin-left: auto;
-}
-
-// error message
+// General styles
 .ErrorMessage {
   margin: 0.5rem 0;
 
   font-size: 1.25rem;
-  line-height: 1.95rem;
+  line-height: 1.5;
   color: mat-color($app-theme, 500);
 }
 
-
-.ErrorMessage a {
-    text-decoration: underline !important;
-}
-
-.ddp-activity-validation {
-    .ErrorMessageList {
-        list-style-type: square;
-    }
-
-    .ErrorMessageItem {
-        font-size: 1.25rem;
-        color: mat-color($app-theme, 500);
-        margin: .3rem 0;
-        padding: 0 0 0 0;
-    }
-}
-
-// info box
 .infobox {
-    border: 2px solid mat-color($app-theme, 250);
-    border-radius: 8px;
-    padding: 0 1.6rem;
+  margin: 1.5rem 0;
+  padding: 0 1.5rem;
+
+  border: 3px solid mat-color($app-theme, 300);
 }
 
-.ddp-required-question-prompt:after {
-    content: ' *';
+// Material styles
+.mat-error {
+  font-size: 0.9rem;
+}
+
+.mat-form-field-infix {
+  color: mat-color($app-theme, 200);
+  font-size: 1.25rem;
+}
+
+.mat-list .mat-list-item .mat-list-item-content {
+  display: block !important;
+  padding: 0 4px !important;
+}
+
+.mat-select-value {
+  color: mat-color($app-theme, 700);
+}
+
+.mat-checkbox-label,
+.mat-radio-label-content {
+  font-size: 1.25rem;
+  line-height: 1.5 !important;
+  color: mat-color($app-theme, 700);
+}
+
+.mat-checkbox-inner-container {
+  height: 1.375rem !important;
+  width: 1.375rem !important;
+
+  margin-top: 0 !important;
+
+  top: 4px;
+}
+
+.mat-radio-label-content {
+  font-weight: 400;
+}
+
+// Activity styles
+.activity {
+  &__btn-section {
+    display: flex;
+
+    margin-top: 2rem;
+
+    &__right {
+      margin-left: auto;
+    }
+  }
+}
+
+.rarex-activity {
+  a {
+    color: mat-color($app-theme, 300);
+  }
+}
+
+.activity-spinner {
+  display: flex;
+  justify-content: center;
+
+  margin-top: 6rem;
 }
 
 // native dropdown
@@ -193,236 +290,4 @@ select:disabled {
     color: rgba(0, 0, 0, 0.38);
     border-bottom: 1px dashed rgba(0, 0, 0, 0.38);
     cursor: auto;
-}
-
-// material dropdown
-.mat-select-value {
-    color: mat-color($app-theme, 700);
-}
-
-// picklist
-.mat-checkbox-label,
-.mat-radio-label-content {
-    font-size: 1.25rem;
-    line-height: 1.25rem !important;
-    color: mat-color($app-theme, 700);
-}
-
-.mat-checkbox-inner-container {
-    height: 1.375rem !important;
-    width: 1.375rem !important;
-}
-
-.mat-radio-label {
-    margin: 0.5rem 0;
-    align-items: unset !important;
-}
-
-.mat-radio-label-content {
-    font-weight: 400;
-}
-
-.picklist {
-    .ddp-date-field-margin:first-child {
-        margin: 0 1.5rem 0 0;
-    }
-
-    .ddp-date-field-margin:last-child {
-        margin: 0;
-    }
-}
-
-.ddp-picklist-option-list-item {
-    height: auto !important;
-    margin-bottom: 1rem;
-}
-
-.mat-list .mat-list-item .mat-list-item-content {
-    display: block !important;
-    padding: 0 4px !important;
-}
-
-.ddp-helper {
-    margin: 0;
-    font-size: 1.125rem;
-    line-height: 1.4375rem;
-    color: mat-color($app-theme, 700);
-    font-weight: 400;
-}
-
-.ddp-counter-color {
-    color: mat-color($app-theme, 250);
-}
-
-// input
-.mat-form-field-infix {
-    color: mat-color($app-theme, 700);
-    font-size: 1.25rem;
-}
-
-// agreement question
-.ddp-agreement-text {
-    white-space: normal;
-    color: mat-color($app-theme, 700);
-}
-
-.ddp-agreement {
-    .mat-checkbox-inner-container {
-        top: 4px;
-    }
-}
-
-.ddp-content__agreement {
-    font-family: 'Source Serif Pro', serif;
-    font-size: 1.5rem;
-    line-height: 2.875rem;
-}
-
-// composite question
-ddp-activity-composite-answer {
-
-    p,
-    span {
-        font-weight: 400;
-    }
-
-    .mat-form-field {
-        width: 100%;
-    }
-}
-
-.ddp-composite-text {
-    flex-grow: 1;
-    margin-right: 1.5rem;
-}
-
-@media screen and (max-width: 560px) {
-    .ddp-answer-container {
-        display: flex !important;
-        flex-direction: column !important;
-    }
-
-    .ddp-date-field-margin:first-child,
-    .ddp-composite-text {
-        margin-right: 0 !important;
-    }
-}
-
-// institutions
-.ddp-institutions-form {
-    margin: 2rem 0;
-    font-weight: 400;
-}
-
-.ddp-address-embedded__title,
-.ddp-institutions-form__title {
-    font-family: 'Source Serif Pro', serif;
-    font-size: 1.5rem;
-    line-height: 2.875rem;
-    margin: 0;
-}
-
-.ddp-address-embedded__subtitle,
-.ddp-institutions-form__subtitle {
-    font-size: 1rem;
-    line-height: 1.5rem;
-    margin: 0 0 0.5rem 0;
-    color: mat-color($app-theme, 700);
-}
-
-.ddp-institutions-form__button {
-    padding: 1.3rem 0;
-}
-
-// mat error
-.mat-error {
-    font-size: 0.9rem;
-}
-
-.activity {
-  &__btn-section {
-    display: flex;
-
-    margin-top: 2rem;
-
-    &__right {
-      margin-left: auto;
-    }
-  }
-}
-
-.rarex-activity {
-  a {
-    color: mat-color($app-theme, 300);
-  }
-}
-
-.ddp-list {
-  padding: 0 0 0 1.5rem;
-}
-
-.ddp-simple-list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-.ddp-question-prompt {
-  margin: 1.5rem 0 0.5rem 0;
-
-  font-family: inherit;
-  font-size: 1.25rem;
-  font-weight: bold;
-  line-height: 1.95rem;
-  color: black;
-}
-
-.ddp-block-title-bold {
-  font-weight: bold;
-  color: black;
-}
-
-.ddp-block-body {
-  margin: 1rem 0 1rem -1.5rem;
-
-  font-size: 1.25rem;
-  line-height: 1.95rem;
-  color: mat-color($app-theme, 200);
-}
-
-.ol-flat-list {
-  padding: 0 0 0 1.5rem;
-  color: mat-color($app-theme, 200);
-
-  & > li > span:first-child {
-    color: black;
-    font-weight: bold;
-  }
-}
-
-.activity-spinner {
-  display: flex;
-  justify-content: center;
-
-  margin-top: 6rem;
-}
-
-.ddp-learn-more {
-  summary {
-    color: mat-color($app-theme, 300);
-
-    cursor: pointer;
-    list-style: none;
-
-    &:focus,
-    &:hover {
-      text-decoration: underline;
-
-      outline: none;
-    }
-
-    &::-webkit-details-marker {
-      display: none;
-    }
-  }
 }
