rarex | change url where home link points to

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/footer/footer.component.html
@@ -3,7 +3,15 @@
     <ul class="nav-list">
       <li *ngFor="let link of navLinks" class="nav-list__item">
         <a
+          *ngIf="!link.external"
           [routerLink]="link.routePath"
+          class="nav-list__link"
+          translate
+        >{{ link.translationKey }}</a>
+
+        <a
+          *ngIf="link.external"
+          [href]="link.routePath"
           class="nav-list__link"
           translate
         >{{ link.translationKey }}</a>
