--- a/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
@@ -105,6 +105,10 @@
 }
 
 // activity lists
+.release-list-item {
+    margin-left: 2rem;
+}
+
 .ddp-list {
     padding: 0 0 0 1.5rem;
     font-size: 1.5rem;
