--- a/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
@@ -45,7 +45,7 @@
 }
 
 .sticky-block {
-    margin: 0.5rem 0;
+    margin: 0.8rem 0;
 
     .sticky__text {
         font-size: 1.0625rem;
@@ -417,6 +417,8 @@ select:disabled {
     color: mat-color($app-theme, 1300);
 }
 
+.boolean-answer-CONSENT_BLOOD,
+.boolean-answer-CONSENT_TISSUE,
 .boolean-answer-PARENTAL_CONSENT_BLOOD,
 .boolean-answer-PARENTAL_CONSENT_TISSUE,
 .boolean-answer-CONSENT_ASSENT_BLOOD,
