Prion: DDP-5072, add study listing to header: tweaked CSS and cleaned up

--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -565,6 +565,10 @@ mat-icon.ddp-dropdown-arrow {
     clear: both;
 }
 
+.scroll-table-container {
+    overflow: auto;
+}
+
 //Study Listing Table
 //All filters (top and column filters)
 input.mat-input-element.study-listing-filter {
@@ -573,86 +577,72 @@ input.mat-input-element.study-listing-filter {
   margin-top: 0;
 }
 
-.scroll-table-container {
-    overflow: auto !important;
+.study-listing-filter-all-container {
+    min-width: 660px;
 }
 
-.study-listing-table {
-    table-layout: fixed;
-    overflow-wrap: break-word;
+.table--studyListing {
+  table-layout: fixed;
+  overflow-wrap: break-word;
+  min-width: 720px;
 
-    //Add color striping
-    .filter-row, tbody>tr:nth-of-type(even) {
-        background-color: #f9f9f9;
-    }
+  //Add color striping
+  .filter-row, tbody>tr:nth-of-type(even) {
+    background-color: #f9f9f9;
+  }
 
-    //Longer second column
-    th:nth-of-type(2) {
-        width: 30%;
-    }
+  .header-row {
+      th:nth-of-type(2) {
+          width: 22%;
+      }
+      th:nth-of-type(3) {
+          width: 15%;
+      }
+      th:nth-of-type(5) {
+          width: 20%;
+      }
+  }
 
-    //Make cell padding consistent
-    th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type,
-    th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type
-    {
-        padding-left: 8px !important;
-        padding-right: 8px !important;
-    }
+  //Make cell padding consistent
+  th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type,
+  th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type
+  {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
 
-    //Table headers
-    th {
-        font-weight: bold;
-        font-size: 15px;
-        color: #333;
-    }
+  //Table headers
+  th {
+    font-weight: bold;
+    font-size: 15px;
+    color: #333;
+  }
 
-    tr.mat-header-row {
-        height: unset;
-    }
+  tr.mat-header-row {
+    height: unset;
+  }
 
-    //Filter header row
-    .study-listing-filter-col {
-        width: auto;
-    }
+  //Filter header row
+  .study-listing-filter-col {
+    width: auto;
+  }
 
-    .filter-cell {
-        border-bottom-width: 1px;
-    }
+  .filter-cell {
+    border-bottom-width: 1px;
+  }
 
-    //Table body
-    td {
-        display: table-cell;
-    }
+  //Table body
+  td {
+    display: table-cell;
+  }
 
-    .mat-cell {
-        font-size: 15px;
-    }
+  .mat-cell {
+    font-size: 15px;
+  }
 
-    dt {
-        font-weight: 400;
-    }
-}
-
-//Inside the table
-@media only screen and (max-width: 767px) {
-    .table-container {
-        width: 662px !important;
-    }
-
-    .study-listing-table {
-        th:nth-of-type(2) {
-            width: 20% !important;
-        }
-        th:nth-of-type(3) {
-            width: 16% !important;
-        }
-        th:nth-of-type(5) {
-            width: 20% !important;
-        }
-        th:nth-of-type(6) {
-            width: 16% !important;
-        }
-    }
+  dt {
+    font-weight: 400;
+  }
 }
 
 .ddp-dashboard {
@@ -804,7 +794,7 @@ input.mat-input-element.study-listing-filter {
   padding: 12px 30px !important;
 }
 
-button[data-ddp-test="signInButton"], button[data-ddp-test="signOutButton"] {
+button[data-ddp-test="signInButton"], button[ data-ddp-test="signOutButton"] {
   margin-top: 0;
 }
 
@@ -991,15 +981,6 @@ button.Footer-link {
     overflow: hidden;
     box-shadow: 1px 1px 5px #9E9E9E;
 }
-/*
-.ScrollContainer {
-    overflow: auto;
-}
-
-.NoScrollContainer {
-    overflow: hidden;
-}
-*/
 
 .PageHeader {
     height: auto;
