DDP-5030: Brain pediatrics styling (#320)
* add activities styling

* Constent styles

* Fix

* Fix

--- a/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
@@ -7,6 +7,7 @@
 @import './styles/stay-informed.scss';
 @import './styles/age-up-thank-you.scss';
 @import './styles/activities.scss';
+@import './styles/dashboard.scss';
 
 $custom-typography: mat-typography-config($font-family: 'Untitled-Sans-Regular');
 @include mat-core($custom-typography);
@@ -50,12 +51,6 @@ body {
     flex-direction: column;
     align-items: center;
     min-height: 100%;
-
-    &_activity {
-        padding-bottom: 6.25rem;
-        padding-top: 1rem;
-        box-sizing: border-box;
-    }
 }
 
 .section {
@@ -145,6 +140,12 @@ p {
     margin: 0;
 }
 
+.only-margin-bottom {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .h2-big {
     font-size: 2.5rem;
     line-height: 3.125rem;
@@ -167,8 +168,16 @@ p {
     font-family: 'Untitled-Sans-Regular', sans-serif;
 }
 
+.bold,
 .medium {
     font-family: 'Untitled-Sans-Medium', sans-serif;
+}
+
+.normal {
+    font-family: 'Untitled-Sans-Regular', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 32px;
 }
 
 .italic {
