--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -681,6 +681,11 @@ input.mat-input-element.study-listing-filter {
     z-index: 1000;
 }
 
+.Header--home {
+    background: transparent !important;
+    position: absolute;
+}
+
 .Header-background {
     position: relative;
     padding: 30px 80px 20px 80px;
@@ -694,20 +699,43 @@ input.mat-input-element.study-listing-filter {
     width: 100%;
 }
 
-.Header--home {
-    background: transparent !important;
-    position: absolute;
+.navbar-nav {
+    float: right !important;
+    width: 649px;
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (min-width: 1027px) and (max-width: 1200px) {
+    .Header-background {
+        padding: 30px 40px 20px 80px !important;
+    }
+    .navbar-nav {
+        float: right !important;
+        width: 649px;
+    }
+}
+
+@media only screen and (min-width: 993px) and (max-width: 1026px) {
+    .Header-background {
+        padding: 30px 40px 20px 80px !important;
+    }
+    .navbar-nav {
+        float: right !important;
+        width: 584px;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 992px) {
     .Header-background {
         padding: 25px 0 0 0 !important;
     }
     .navbar-header {
-        padding: 0 25px 25px 25px !important;
+        padding: 0 10px 25px 25px !important;
     }
     .navbar-collapse {
         padding: 0 25px 10px 25px !important;
+    }
+    .navbar-nav {
+        width: 415px !important;
     }
 }
 
