--- a/ddp-workspace/projects/ddp-rarex/src/styles/_common.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_common.scss
@@ -33,16 +33,83 @@
   max-width: 700px;
 }
 
-.margin-bottom {
-  margin-bottom: 1rem;
-}
-
 .no-margin {
   margin: 0;
+}
+
+$spacings: (
+  1: 3rem,
+  2: 2.5rem,
+  3: 2rem,
+  4: 1.5rem,
+  5: 1rem,
+  6: 0.5rem,
+);
+
+@each $key, $value in $spacings {
+  .mt-#{$key} {
+    margin-top: $value;
+  }
+}
+
+@each $key, $value in $spacings {
+  .mb-#{$key} {
+    margin-bottom: $value;
+  }
+}
+
+@each $key, $value in $spacings {
+  .mr-#{$key} {
+    margin-right: $value;
+  }
+}
+
+@each $key, $value in $spacings {
+  .ml-#{$key} {
+    margin-left: $value;
+  }
+}
+
+@each $key, $value in $spacings {
+  .pt-#{$key} {
+    padding-top: $value;
+  }
+}
+
+@each $key, $value in $spacings {
+  .pb-#{$key} {
+    padding-bottom: $value;
+  }
+}
+
+@each $key, $value in $spacings {
+  .pr-#{$key} {
+    padding-right: $value;
+  }
+}
+
+@each $key, $value in $spacings {
+  .pl-#{$key} {
+    padding-left: $value;
+  }
+}
+
+.margin-bottom {
+  margin-bottom: 1rem;
 }
 
 .tooltip__icon {
   width: 24px;
   height: 24px;
   margin-left: 4px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+table {
+  td {
+    vertical-align: top;
+  }
 }
