Fix CHILD_OTHER_CANCER_LIST question

--- a/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
@@ -441,6 +441,7 @@ select:disabled {
     }
 }
 
+.composite-answer-CHILD_OTHER_CANCER_LIST,
 .composite-answer-OTHER_CANCER_LIST {
     .ddp-answer-container {
         align-items: baseline;
