RAR-103: Remove tagline

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.html
@@ -12,15 +12,12 @@
       />
     </a>
 
-    <div class="main-header__powered-by powered-by">
-      <a class="powered-by__link" [href]="rarexLink" target="_blank">
-        <img
-          class="powered-by__img"
-          src="assets/images/powered-by-rarex.png"
-          [alt]="'Header.Alts.PoweredBy' | translate"
-        />
-      </a>
-      <p class="powered-by__catchphrase" translate>Header.Catchphrase</p>
-    </div>
+    <a class="main-header__powered-by powered-by" [href]="rarexLink" target="_blank">
+      <img
+        class="powered-by__img"
+        src="assets/images/powered-by-rarex.png"
+        [alt]="'Header.Alts.PoweredBy' | translate"
+      />
+    </a>
   </div>
 </header>
