DDP-5079 testboston: kit and consent pdfs for new languages

--- a/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.html
@@ -6,7 +6,7 @@
 
                 <h2 class="sub-title" translate>Help.Collect.Title</h2>
                 <p translate>Help.Collect.Text</p>
-                <a class="pdf" href="kit-instructions.pdf" target="_blank">
+                <a class="pdf" href="en/kit-instructions.pdf" target="_blank">
                     <img class="pdf__image" src="assets/images/pdf.png" [alt]="'Help.Collect.IconAlt' | translate">
                     <span translate>Help.Collect.Link</span>
                 </a>
