--- a/ddp-workspace/projects/ddp-osteo/src/styles/dashboard.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/styles/dashboard.scss
@@ -47,6 +47,10 @@
         flex: 0 0 20%;
     }
 
+    .mat-column-status {
+        flex: 0 0 15%;
+    }
+
     .dashboard-mobile-label {
         color: rgba(0, 0, 0, 0.54);
     }
