--- a/ddp-workspace/projects/ddp-brain-v2/src/styles/dashboard.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles/dashboard.scss
@@ -43,8 +43,16 @@
         line-height: 1.75rem !important;
     }
 
+    .mat-cell:last-of-type {
+        padding-right: 5px !important;
+    }
+
     .mat-column-name {
         flex: 0 0 20%;
+    }
+
+    .mat-column-status {
+        flex: 0 0 15%;
     }
 
     .dashboard-mobile-label {
@@ -64,6 +72,13 @@
     .Link {
         color: mat-color($app-theme, 200);
         white-space: normal;
+    }
+
+    @media(max-width: 780px) {
+        .button_small {
+            font-size: 1.125rem;
+            line-height: 1.75rem;
+        }
     }
 
     @media(max-width: 650px) {
