--- a/ddp-workspace/projects/ddp-rarex/src/app/components/rarex-activity-page/rarex-activity-page.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/rarex-activity-page/rarex-activity-page.component.html
@@ -1,5 +1,8 @@
-<div class="rarex-activity-page container">
-  <div *ngIf="isConsentComplete && !isFetchingActivities && isActivityShown" class="rarex-activity-page__progress-container">
+<div class="rarex-activity-page">
+  <div
+    *ngIf="isWorkflowProgressShown"
+    class="rarex-activity-page__progress-container"
+  >
     <app-workflow-progress
       [activityList]="activities"
       [instanceGuid]="instanceGuid"
