--- a/ddp-workspace/projects/ddp-rarex/src/app/components/workflow-progress/workflow-progress.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/workflow-progress/workflow-progress.component.html
@@ -1,6 +1,10 @@
 <ul class="workflow-progress">
   <ng-container *ngFor="let activity of activityList; let i = index; let isLast = last">
-    <li class="workflow-progress__item" (click)="onWorkflowItemClick(activity)">
+    <li
+      class="workflow-progress__item"
+      (click)="onWorkflowItemClick(activity)"
+      [class.workflow-progress__item--active]="activity.instanceGuid === instanceGuid"
+    >
       <div class="workflow-progress-step">
         <div
           class="workflow-progress-step__circle"
@@ -14,8 +18,8 @@
             activity.statusCode === CompleteStatusCode || activity.instanceGuid === instanceGuid
           "
         >
-        <span class="workflow-progress-step__step-count">
-          Step {{ i + 1 }}
+        <span class="workflow-progress-step__step-count" translate>
+          {{ 'Activities.StatusCodes.' + activity.statusCode }}
         </span>
           <p class="workflow-progress-step__step-name">
             {{ activity.activityName }}
@@ -26,9 +30,12 @@
     <li
       *ngIf="!isLast"
       class="workflow-progress__divider"
-      [class.workflow-progress__divider--complete]="activityList[i + 1].statusCode === CompleteStatusCode"
-      [class.workflow-progress__divider--active]="
-        activityList[i + 1].instanceGuid === instanceGuid && activityList[i].statusCode === CompleteStatusCode
+      [class.workflow-progress__divider--teal]="
+        activityList[i].statusCode === CompleteStatusCode && activityList[i + 1].instanceGuid === instanceGuid &&
+        activityList[i + 1].statusCode !== CompleteStatusCode
+      "
+      [class.workflow-progress__divider--blue]="
+        activityList[i].statusCode === CompleteStatusCode && activityList[i + 1].statusCode === CompleteStatusCode
       "
     ></li>
   </ng-container>
