--- a/ddp-workspace/projects/ddp-rarex/src/app/components/workflow-progress/workflow-progress.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/workflow-progress/workflow-progress.component.scss
@@ -1,13 +1,17 @@
 @import '../../../app-theme';
 
 .workflow-progress {
+  width: 20rem;
+
   list-style: none;
   position: sticky;
   top: 2.4rem;
 
-  @media only screen and (max-width: 1024px) {
+  @media only screen and (max-width: 1400px) {
     display: flex;
     flex-flow: row wrap;
+
+    width: 100%;
   }
 
   &__item {
@@ -19,12 +23,19 @@
       opacity: 0.75;
     }
 
-    @media only screen and (max-width: 1024px) {
-      flex: 1;
-      min-width: 10rem;
+    @media only screen and (max-width: 1400px) {
+      width: calc(100% / 3);
 
       margin-bottom: 1rem;
       padding: 0 2px;
+    }
+
+    @media only screen and (max-width: 420px) {
+      width: 50%;
+    }
+
+    &--active {
+      cursor: default;
     }
   }
 
@@ -32,20 +43,20 @@
     width: 2px;
     height: 1.6rem;
 
-    margin: 0.5rem 0 0.5rem 20px;
+    margin: 0 0 0 17px;
 
     background-color: rgba(0, 0, 0, 0.3);
 
-    @media only screen and (max-width: 1024px) {
+    @media only screen and (max-width: 1400px) {
       display: none;
     }
 
-    &--active {
-      background-color: mat-color($app-theme, 350);
+    &--blue {
+      background-color: mat-color($app-theme, 300);
     }
 
-    &--complete {
-      background-color: mat-color($app-theme, 250);
+    &--teal {
+      background-color: mat-color($app-theme, 350);
     }
   }
 }
@@ -54,22 +65,25 @@
   display: flex;
   align-items: center;
 
-  @media only screen and (max-width: 1024px) {
+  position: relative;
+
+  @media only screen and (max-width: 1400px) {
     flex-flow: column nowrap;
     align-items: flex-start;
   }
 
   &__circle {
-    width: 42px;
-    height: 42px;
+    flex-shrink: 0;
+    width: 36px;
+    height: 36px;
 
-    margin-right: 1.6rem;
+    margin-right: 1.2rem;
 
     background-color: transparent;
     border: 2px solid rgba(0, 0, 0, 0.3);
-    border-radius: 21px;
+    border-radius: 18px;
 
-    @media only screen and (max-width: 1024px) {
+    @media only screen and (max-width: 1400px) {
       width: 100%;
       height: 3px;
 
@@ -77,8 +91,8 @@
     }
 
     &--complete {
-      border-color: mat-color($app-theme, 250);
-      background-color: mat-color($app-theme, 250);
+      border-color: mat-color($app-theme, 300);
+      background-color: mat-color($app-theme, 300);
     }
 
     &--active {
@@ -93,7 +107,7 @@
 
     opacity: 0.5;
 
-    @media only screen and (max-width: 1024px) {
+    @media only screen and (max-width: 1400px) {
       margin-top: 0.6rem;
       padding: 0 0.6rem;
     }
@@ -104,19 +118,28 @@
   }
 
   &__step-count {
+    position: absolute;
+    top: 100%;
+
     font-size: 0.8rem;
+    font-weight: bold;
+    text-transform: uppercase;
     line-height: 1;
     color: black;
-    text-transform: uppercase;
+
+    @media only screen and (max-width: 1400px) {
+      position: static;
+    }
   }
 
   &__step-name {
     margin: 0;
 
-    font-size: 1.2rem;
+    font-size: 1.0625rem;
+    line-height: 1;
     color: black;
 
-    @media only screen and (max-width: 1024px) {
+    @media only screen and (max-width: 1400px) {
       font-size: 1rem;
       line-height: 1.3;
     }
