--- a/ddp-workspace/projects/ddp-rarex/src/styles/_typography.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_typography.scss
@@ -5,36 +5,39 @@ ul li,
 p {
   margin: 1em 0;
 
-  font-size: 1.25rem;
-  line-height: 1.5;
+  font-size: 1.0625rem;
+  line-height: 1.65rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
+  margin: 1em 0;
+
   color: black;
+  text-decoration: none;
 }
 
 h1 {
-  font-size: 2.25rem;
+  font-size: 2rem;
 }
 
 h2 {
-  font-size: 1.95rem;
-}
-
-h3 {
   font-size: 1.5rem;
 }
 
-h4 {
+h3 {
   font-size: 1.35rem;
 }
 
-h5 {
+h4 {
   font-size: 1.2rem;
 }
 
+h5 {
+  font-size: 1.1rem;
+}
+
 h6 {
-  font-size: 1.05rem;
+  font-size: 1.0625rem;
 }
 
 .underline {
@@ -47,9 +50,9 @@ h6 {
 }
 
 .consent-agree {
-  margin: 1.25rem 0;
+  margin: 1em 0;
 
-  font-size: 1.35rem;
+  font-size: 1.2rem;
   color: black;
   font-weight: bold;
 }
